[package]
# Published to crates.io as `locusdb` ("locus" was already taken); the binary,
# repo, and Docker image are all still `locus`. So `cargo install locusdb`
# installs a `locus` command (see [[bin]] below).
name = "locusdb"
version = "0.5.0"
edition = "2024"
description = "A zero-dependency, from-scratch Redis-protocol datastore in Rust — with a reactive changefeed, geo-first spatial model, and horizontal spatial clustering."
authors = ["Emad Jumaah"]
license = "MIT"
repository = "https://github.com/intenttext/locus"
readme = "README.md"
keywords = ["redis", "key-value", "in-memory", "database", "resp"]
categories = ["database-implementations", "caching"]

[[bin]]
name = "locus"
path = "src/main.rs"

[features]
# OFF by default: the default build stays 100% dependency-free (pure std). Opt in
# with `cargo build --features tls` to terminate TLS in-process via rustls (a
# pure-Rust, memory-safe stack with the `ring` crypto provider — no OpenSSL/C).
tls = ["dep:rustls"]

[dependencies]
# Optional, and only pulled in by the `tls` feature — see the note above. Pinned
# to the ring provider so the tls build needs no C toolchain.
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
], optional = true }

[profile.release]
opt-level = 3
